# chessboard-camera-pose

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  CameraPose.cpp  main.cpp
include/: CameraPose.hpp
test/: CMakeLists.txt  main.cpp  test.cpp
